--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@react-navigation/stack": "^5.9.0",
     "expo": "~38.0.8",
     "expo-font": "^8.2.2",
+    "expo-image-picker": "~8.3.0",
+    "expo-permissions": "~9.0.1",
+    "expo-sqlite": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -29,7 +32,9 @@
     "react-navigation": "^4.4.0",
     "react-navigation-header-buttons": "^5.0.0",
     "react-redux": "^7.2.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "expo-file-system": "~9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
